finishing the spacing issues

--- a/src/packages/modules/language-interstitial-z5/css/_responsive-language-interstitial-z5.scss
+++ b/src/packages/modules/language-interstitial-z5/css/_responsive-language-interstitial-z5.scss
@@ -30,7 +30,7 @@ $desktopMin: px-em(980);
         height: 206px;
       }
     .module-li-main {
-      padding: 50px 0 70px 0;
+      padding: 44px 0 70px 0;
       .module-text-box {
         width: 100%;
       }
